// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditConfigFamilyDialog component tests > should render dialog 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.c33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c30 {
  margin-left: -5px;
}

.c30>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c30>* {
  margin-left: 5px;
}

.c29 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c34 {
  cursor: pointer;
  width: 16px;
  height: 16px;
  line-height: 16px;
}

.c34 * {
  height: inherit;
  width: inherit;
}

.c12 {
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #e5e5e5;
  position: relative;
}

.c13 {
  margin: 0 0 1px 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c16 {
  word-break: break-all;
  min-width: 100px;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102, 102, 102, 0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c43 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c42 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient(     -45deg,     transparent,     transparent 2px,     #000 2px,     #000 3px   );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #7F7F7F;
  border-radius: 3px;
  border: 1px solid #7F7F7F;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #074320;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  line-height: 24px;
}

.c5 :hover {
  border: 1px solid #074320;
}

.c5 * {
  height: inherit;
  width: inherit;
}

.c39 {
  display: inline-block;
  padding: 0 15px;
  color: #4C4C4C;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #bfbfbf;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c39:focus,
.c39:hover {
  border: 1px solid #4C4C4C;
}

.c39:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #11ab51;
  font-weight: bold;
  color: #fff;
}

.c39[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c39 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c39:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4C4C4C;
}

.c40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c41 {
  border: 1px solid #7F7F7F;
  color: #fff;
  background: #11ab51;
}

.c41 :hover {
  color: #074320;
  background: #A1DDBA;
}

.c37 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #e5e5e5;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
}

.c38 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c4 {
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #7F7F7F;
  color: #fff;
  font-weight: bold;
  background: #11ab51;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: grab;
}

.c8 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c7 {
  overflow: hidden;
  height: 100%;
}

.c10 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
}

.c17 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c18 th,
.c18 td {
  padding: 4px 10px;
  border-bottom: 1px solid #e5e5e5;
}

.c18 tfoot tr {
  background: #fff;
}

.c18 tfoot tr td {
  border-bottom: 1px solid #e5e5e5;
}

.c19 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000;
}

.c19 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #000;
}

.c21 {
  cursor: pointer;
}

.c20 {
  background-color: #fff;
  color: #000;
  border-top: 1px solid #e5e5e5;
  font-weight: bold;
}

.c28 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: normal;
  cursor: pointer;
}

.c31 {
  font-family: inherit;
  font-size: inherit;
  padding: 0;
  margin: 0;
  margin-left: 10px;
  line-height: normal;
  width: auto;
  height: auto;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 {
  height: 13px;
  box-sizing: content-box;
  display: inline-block;
  width: 100px;
  background: #4C4C4C;
  vertical-align: middle;
  text-align: center;
}

.c26 {
  z-index: 1;
  font-weight: bold;
  color: #fff;
  font-size: 9px;
  margin: 0;
  position: relative;
  top: -13px;
  padding-top: 1px;
}

.c25 {
  height: 13px;
  width: 10%;
  background: #4f91c7;
}

.c35 {
  height: 13px;
  width: 100%;
  background: #c83814;
}

@media print {
  .c34 {
    display: none;
  }
}

@media print {
  .c10 {
    border-collapse: collapse;
  }
}

@media print {
  .c17 {
    border-collapse: collapse;
  }
}

@media screen {
  .c18>tbody:nth-of-type(even),
  .c18>tbody:only-of-type>tr:nth-of-type(even) {
    background: #f3f3f3;
  }

  .c18>tbody:not(:only-of-type):hover,
  .c18>tbody:only-of-type>tr:hover {
    background: #e5e5e5;
  }
}

@media print {
  .c19 {
    border-bottom: 1px solid black;
  }

  .c19 a,
  .c19 a:hover {
    -webkit-text-decoration: none;
    text-decoration: none;
    color: #000;
  }
}

@media print {
  .c20 {
    color: #000;
    font-size: 1.2em;
    background-color: transparent;
    font-weight: bold;
  }
}

@media print {
  .c24 {
    background: none;
    border: 0;
  }
}

@media print {
  .c26 {
    color: black;
  }
}

@media print {
  .c25 {
    background: none;
  }
}

@media print {
  .c35 {
    background: none;
  }
}

<body>
  <div
    id="portals"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3 c4"
              data-testid="dialog-title-bar"
            >
              <span>
                Foo title
              </span>
              <div
                class="c5"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c6 c7"
            >
              <div
                class="c8"
                data-testid="save-dialog-content"
              >
                <div
                  class="c9"
                >
                  <table
                    class="c10"
                  >
                    <tbody
                      class=""
                    >
                      <tr>
                        <td>
                          <div
                            class="c9"
                          >
                            Config
                          </div>
                        </td>
                        <td>
                          <div
                            class="c9"
                          >
                            foo
                          </div>
                        </td>
                      </tr>
                      <tr>
                        <td>
                          <div
                            class="c9"
                          >
                            Family
                          </div>
                        </td>
                        <td>
                          <div
                            class="c9"
                          >
                            family
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                  <section>
                    <div
                      class="c11 c12 section-header"
                    >
                      <h2
                        class="c13 c14"
                      >
                        <div
                          class="c15 c16"
                        >
                          Edit Network Vulnerability Tests
                        </div>
                      </h2>
                      <div
                        class="c3"
                      />
                    </div>
                    <table
                      class="c17 c18"
                    >
                      <thead
                        class="c19"
                      >
                        <tr>
                          <th
                            class="c20"
                          >
                            <a
                              class="c21"
                            >
                              <div
                                class="c22"
                              >
                                Name
                                <span
                                  title="Sorted In Ascending Order By Name"
                                >
                                   ▲
                                </span>
                              </div>
                            </a>
                          </th>
                          <th
                            class="c20"
                          >
                            <a
                              class="c21"
                            >
                              <div
                                class="c22"
                              >
                                OID
                              </div>
                            </a>
                          </th>
                          <th
                            class="c20"
                          >
                            <a
                              class="c21"
                            >
                              <div
                                class="c22"
                              >
                                Severity
                              </div>
                            </a>
                          </th>
                          <th
                            class="c20"
                          >
                            <a
                              class="c21"
                            >
                              <div
                                class="c22"
                              >
                                Timeout
                              </div>
                            </a>
                          </th>
                          <th
                            class="c20"
                          >
                            <div
                              class="c22"
                            >
                              Prefs
                            </div>
                          </th>
                          <th
                            class="c20"
                          >
                            <a
                              class="c21"
                            >
                              <div
                                class="c23"
                              >
                                Selected
                              </div>
                            </a>
                          </th>
                          <th
                            class="c20"
                          >
                            <div
                              class="c23"
                            >
                              Actions
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class=""
                      >
                        <tr>
                          <td>
                            <div
                              class="c9"
                            >
                              nvt
                            </div>
                          </td>
                          <td>
                            <div
                              class="c9"
                            >
                              1234
                            </div>
                          </td>
                          <td>
                            <div
                              class="c9"
                            >
                              <div
                                class="c24"
                                data-testid="progressbar-box"
                                title="Low"
                              >
                                <div
                                  background="low"
                                  class="c25"
                                  data-testid="progress"
                                />
                                <div
                                  class="c26"
                                >
                                  1.0 (Low)
                                </div>
                              </div>
                            </div>
                          </td>
                          <td>
                            <div
                              class="c9"
                            >
                              default
                            </div>
                          </td>
                          <td>
                            <div
                              class="c9"
                            >
                              3
                            </div>
                          </td>
                          <td>
                            <div
                              class="c27"
                            >
                              <div>
                                <label
                                  class="c28"
                                >
                                  <div
                                    class="c22 c29"
                                  >
                                    <div
                                      class="c22 c30"
                                    >
                                      <input
                                        class="c31 c32"
                                        name="1234"
                                        type="checkbox"
                                      />
                                    </div>
                                  </div>
                                </label>
                              </div>
                            </div>
                          </td>
                          <td>
                            <div
                              class="c33"
                            >
                              <span
                                class="c34"
                                data-testid="svg-icon"
                                title="Select and edit NVT details"
                              >
                                <svg
                                  height="1em"
                                  title="Select and edit NVT details"
                                  viewBox="0 0 67.733 67.733"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <g
                                    transform="translate(0 -229.27)"
                                  >
                                    <path
                                      class="gui_icon_class"
                                      d="m221.48-0.048828-137.1 137.1-16.971 50.912 50.912-16.971 137.1-137.1-33.941-33.943zm-221.48 16.049v240h192v-128h-16.006v112.01h-160v-208.01h144.01v-15.996h-160z"
                                      transform="matrix(.26458 0 0 .26458 0 229.27)"
                                    />
                                  </g>
                                </svg>
                              </span>
                            </div>
                          </td>
                        </tr>
                        <tr>
                          <td>
                            <div
                              class="c9"
                            >
                              nvt2
                            </div>
                          </td>
                          <td>
                            <div
                              class="c9"
                            >
                              5678
                            </div>
                          </td>
                          <td>
                            <div
                              class="c9"
                            >
                              <div
                                class="c24"
                                data-testid="progressbar-box"
                                title="High"
                              >
                                <div
                                  background="error"
                                  class="c35"
                                  data-testid="progress"
                                />
                                <div
                                  class="c26"
                                >
                                  10.0 (High)
                                </div>
                              </div>
                            </div>
                          </td>
                          <td>
                            <div
                              class="c9"
                            >
                              1
                            </div>
                          </td>
                          <td>
                            <div
                              class="c9"
                            >
                              4
                            </div>
                          </td>
                          <td>
                            <div
                              class="c27"
                            >
                              <div>
                                <label
                                  class="c28"
                                >
                                  <div
                                    class="c22 c29"
                                  >
                                    <div
                                      class="c22 c30"
                                    >
                                      <input
                                        class="c31 c32"
                                        name="5678"
                                        type="checkbox"
                                      />
                                    </div>
                                  </div>
                                </label>
                              </div>
                            </div>
                          </td>
                          <td>
                            <div
                              class="c33"
                            >
                              <span
                                class="c34"
                                data-testid="svg-icon"
                                title="Select and edit NVT details"
                              >
                                <svg
                                  height="1em"
                                  title="Select and edit NVT details"
                                  viewBox="0 0 67.733 67.733"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <g
                                    transform="translate(0 -229.27)"
                                  >
                                    <path
                                      class="gui_icon_class"
                                      d="m221.48-0.048828-137.1 137.1-16.971 50.912 50.912-16.971 137.1-137.1-33.941-33.943zm-221.48 16.049v240h192v-128h-16.006v112.01h-160v-208.01h144.01v-15.996h-160z"
                                      transform="matrix(.26458 0 0 .26458 0 229.27)"
                                    />
                                  </g>
                                </svg>
                              </span>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </section>
                </div>
              </div>
            </div>
            <div
              class="c36 c37 c38"
            >
              <button
                class="c39 c40 c41"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c39 c40 c41"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c42"
          >
            <div
              class="c43"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;

exports[`EditConfigFamilyDialog component tests > should render loading indicator 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  width: 80px;
  height: 80px;
  margin: 40px auto;
  background-image: url(/src/web/components/icon/svg/greenbone.svg);
  -webkit-background-size: 90%;
  background-size: 90%;
  -webkit-background-position: center;
  background-position: center;
  background-repeat: no-repeat;
  -webkit-animation: hGzRiT 2s infinite ease-in-out;
  animation: hGzRiT 2s infinite ease-in-out;
}

.c10 {
  width: 100%;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 10% auto;
  border: 0;
  outline: 0;
  width: 800px;
  height: px;
}

.c0 {
  position: fixed;
  font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
  font-size: 1.1em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 0;
  background: rgba(102, 102, 102, 0.5);
  z-index: 600;
  -webkit-transition: opacity 1s ease-in;
  transition: opacity 1s ease-in;
  width: 100%;
  height: 100%;
}

.c19 {
  width: 0;
  height: 0;
  cursor: nwse-resize;
  border-right: 20px solid transparent;
  border-bottom: 20px solid transparent;
  border-top: 20px solid #fff;
}

.c18 {
  position: absolute;
  bottom: 3px;
  right: 3px;
  width: 20px;
  height: 20px;
  background: repeating-linear-gradient(     -45deg,     transparent,     transparent 2px,     #000 2px,     #000 3px   );
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  padding: 0;
  background: #fff;
  box-shadow: 5px 5px 10px #7F7F7F;
  border-radius: 3px;
  border: 1px solid #7F7F7F;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  font-size: 12px;
  font-family: Verdana,sans-serif;
  color: #074320;
  cursor: pointer;
  border-radius: 2px;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  line-height: 24px;
}

.c5 :hover {
  border: 1px solid #074320;
}

.c5 * {
  height: inherit;
  width: inherit;
}

.c15 {
  display: inline-block;
  padding: 0 15px;
  color: #4C4C4C;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #bfbfbf;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c15:focus,
.c15:hover {
  border: 1px solid #4C4C4C;
}

.c15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #11ab51;
  font-weight: bold;
  color: #fff;
}

.c15[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c15 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c15:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4C4C4C;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  border: 1px solid #7F7F7F;
  color: #fff;
  background: #11ab51;
}

.c17 :hover {
  color: #074320;
  background: #A1DDBA;
}

.c13 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #e5e5e5;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
}

.c14 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.c4 {
  padding: 5px 5px 5px 10px;
  margin-bottom: 15px;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #7F7F7F;
  color: #fff;
  font-weight: bold;
  background: #11ab51;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: -webkit-grab;
  cursor: grab;
}

.c8 {
  overflow: auto;
  padding: 0 15px;
  width: 100%;
  height: 100%;
  max-height: 400px;
}

.c7 {
  overflow: hidden;
  height: 100%;
}

<body>
  <div
    id="portals"
  >
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
          height="px"
          role="dialog"
          tabindex="1"
          width="800px"
        >
          <div
            class="c2"
          >
            <div
              class="c3 c4"
              data-testid="dialog-title-bar"
            >
              <span>
                Foo title
              </span>
              <div
                class="c5"
                data-testid="dialog-title-close-button"
                title="Close"
              >
                ×
              </div>
            </div>
            <div
              class="c6 c7"
            >
              <div
                class="c8"
                data-testid="save-dialog-content"
              >
                <div
                  class="c9 c10"
                  data-testid="loading"
                >
                  <div
                    class="c11"
                  />
                </div>
              </div>
            </div>
            <div
              class="c12 c13 c14"
            >
              <button
                class="c15 c16 c17"
                data-testid="dialog-close-button"
                title="Cancel"
              >
                Cancel
              </button>
              <button
                class="c15 c16 c17"
                data-testid="dialog-save-button"
                title="Save"
              >
                Save
              </button>
            </div>
          </div>
          <div
            class="c18"
          >
            <div
              class="c19"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;
